Timer gets stopped and bg becomes red at failure.
Squashed commit of the following:

commit 5c3735fcc567a38df90c8ae8b7d7b54229f9fe96
Author: Ahmad Rahima <ahmadrahimaim@gmail.com>
Date:   Tue Sep 5 22:39:14 2023 +0300

    Timer gets stopped and bg becomes red at failure.

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
     transition: opacity 0.5s ease;
 }
 
+
 .grid {
     padding: 8px;
 }
@@ -17,6 +18,10 @@
     padding: 1em;
     font-size: 2em;
     background-color: darker(@accent_color);
+}
+
+.status-bar.failed {
+    background-color: @destructive_color;
 }
 
 .timer-label {
